--- a/main.css
+++ b/main.css
@@ -2,9 +2,9 @@
 
 nav {
     display: flex;
-    flex-flow: column wrap;
+    flex-flow: row nowrap;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-around;
     border: 2px solid red;
 }
 
