--- a/main.css
+++ b/main.css
@@ -10,3 +10,14 @@ nav ul {
 main {
     text-align: center;
 }
+
+.main__button-colored {
+    background-color: var(--color-secondary);
+    color: var(--text-color-tertiary);
+}
+
+.main__button-white {
+    background-color: var(--color-primary);
+    color: var(--text-color-secondary);
+    border: 2px solid var(--color-secondary);
+}
