--- a/base.css
+++ b/base.css
@@ -14,9 +14,10 @@ html {
     --font-primary: 'Rubik', sans serif;
     --color-primary: #ffffff;
     --color-secondary: #370CAD;
-    --text-color-primary: #000000;
+    --text-color-primary: #272727;
     --text-color-secondary: #370CAD;
     --text-color-tertiary: #ffffff;
+    --gradient-primary: linear-gradient(to top right, #370CAD 0%, #13BCCF 100%);
 }
 
 h1, 
@@ -31,7 +32,7 @@ li {
 
 h1 {
 background: #370CAD;
-background: linear-gradient(to top right, #370CAD 0%, #13BCCF 100%);
+background: var(--gradient-primary);
 -webkit-background-clip: text;
 -webkit-text-fill-color: transparent;
 }
