added project placeholders, started project grid + figcaption layout

--- a/main.css
+++ b/main.css
@@ -7,6 +7,10 @@ nav ul {
     justify-content: space-evenly;
 }
 
+.logo__img-full {
+    max-width: 200px;
+}
+
 main {
     text-align: center;
 }
@@ -20,4 +24,47 @@ main {
     background-color: var(--color-primary);
     color: var(--gradient-primary);
     border: 2px solid var(--color-secondary);
+}
+
+.projects {
+    text-align: left;
+}
+
+/* Projects grid layout */
+
+.projects__wrapper {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto;
+    column-gap: 30px;
+}
+
+/* Figcaption styling */
+
+figure {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(4, 1fr);
+    margin: 0;
+    padding: 0;
+}
+
+figure img {
+    max-height: 300px;
+    width: 100%;
+    grid-column: 1/2;
+    grid-row: 1/4;
+}
+
+figcaption {
+    grid-row: 3/4;
+    grid-column: 1/2;
+    background-color: #001219;
+    opacity: 0.7;
+    color: var(--text-color-tertiary);
+    padding: 0.5rem;
+}
+
+figcaption * {
+    margin: 0.5rem;
 }
