--- a/base.css
+++ b/base.css
@@ -4,6 +4,11 @@ html {
     box-sizing: border-box;
 }
 
+body {
+    margin: 0;
+    padding: 0;
+}
+
 *,
 *::before,
 *::after {
@@ -63,4 +68,28 @@ a {
 
 .btn:hover {
     opacity: 0.7;
+}
+
+/* Footer styling */
+
+footer {
+    text-align: center;
+    background: var(--gradient-primary);
+    padding: 4rem;
+}
+
+footer ul {
+    margin: 0;
+    padding: 0;
+}
+
+footer [class*="fa-"] {
+    font-size: 250%;
+    color: var(--color-primary);
+    padding: 0.5rem;
+
+}
+
+icon__container {
+    margin: 0px auto;
 }
