--- a/base.css
+++ b/base.css
@@ -78,6 +78,10 @@ footer {
     padding: 4rem;
 }
 
+footer h2 {
+    color: var(--text-color-tertiary);
+}
+
 footer ul {
     margin: 0;
     padding: 0;
