--- a/main.css
+++ b/main.css
@@ -15,6 +15,12 @@ main {
     text-align: center;
 }
 
+/* button styling */
+
+.btn {
+    margin: 0.5rem;
+}
+
 .main__button-colored {
     background: var(--gradient-primary);
     color: var(--text-color-tertiary);
@@ -26,8 +32,11 @@ main {
     border: 2px solid var(--color-secondary);
 }
 
+/* Projects section styling */
+
 .projects {
     text-align: left;
+    margin: 6rem 2rem;
 }
 
 /* Projects grid layout */
