--- a/main.css
+++ b/main.css
@@ -88,7 +88,7 @@ figcaption * {
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
-    background-color: var(--color-secondary);
+    background-color: #b2bdc4;
     width: 80%;
     margin: 0 auto;
     padding: 2rem 0.5rem;
