--- a/main.css
+++ b/main.css
@@ -95,6 +95,15 @@ figcaption * {
     color: var(--text-color-tertiary);
 }
 
+.prev-btn,
+.next-btn {
+    background: var(--gradient-primary);
+    color: var(--text-color-tertiary);
+    padding: 0.5rem 2rem;
+    border: none;
+    border-radius: 20px;
+}
+
 .testimonials__img-container {
     border-radius: 50%;
     border: 1px solid black;
