--- a/main.css
+++ b/main.css
@@ -93,23 +93,34 @@ figcaption * {
     margin: 0 auto;
     padding: 2rem 0.5rem;
     color: var(--text-color-tertiary);
+    box-shadow: 5px 5px 10px rgba(101, 100, 100, 0.6);
 }
 
 .prev-btn,
 .next-btn {
     background: var(--gradient-primary);
     color: var(--text-color-tertiary);
-    padding: 0.5rem 2rem;
+    padding: 0.5rem 3rem;
     border: none;
     border-radius: 20px;
 }
 
+.prev-btn:hover,
+.next-btn:hover {
+    opacity: 0.7;
+}
+
+.fa-chevron-left,
+.fa-chevron-right {
+    font-size: 150%;
+}
+
 .testimonials__img-container {
     border-radius: 50%;
-    border: 1px solid black;
     width: 150px;
     height: 150px;
     object-fit: cover;
+    filter: drop-shadow(8px 8px 15px rgba(101, 100, 100, 0.8));
 }
 
 #student-img {
