--- a/main.css
+++ b/main.css
@@ -35,8 +35,8 @@ main {
 /* Projects section styling */
 
 .projects {
-    text-align: left;
-    margin: 6rem 2rem;
+    text-align: center;
+    margin: 4rem;
 }
 
 /* Projects grid layout */
@@ -46,6 +46,7 @@ main {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: auto;
     column-gap: 30px;
+    padding: 2rem 4rem;
 }
 
 /* Figcaption styling */
