--- a/Projects/FBT/FBT_base.css
+++ b/Projects/FBT/FBT_base.css
@@ -27,7 +27,7 @@ html {
     align-items: center;
     padding: 1rem;
     border-bottom: 1px solid black;
-    background-image: url("../img/FBT_header_img.png");
+    background-image: url("./img/FBT_header_img.png");
     background-size: cover;
   }
 
