--- a/main.css
+++ b/main.css
@@ -49,7 +49,7 @@ main {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: auto;
     column-gap: 30px;
-    padding: 2rem 4rem;
+    padding: 2rem;
 }
 
 /* Figcaption styling */
@@ -65,10 +65,11 @@ figure {
 }
 
 figure img {
-    height: 100%;
+    /* height: 100%; */
     width: 100%;
     grid-column: 1/2;
     grid-row: 1/4;
+    object-fit: fill;
 }
 
 figure a {
@@ -85,6 +86,10 @@ figcaption {
     padding: 0.5rem;
     cursor: pointer;
     pointer-events: none;
+}
+
+figcaption > p {
+    font-weight: lighter;
 }
 
 figcaption * {
