--- a/main.css
+++ b/main.css
@@ -196,22 +196,24 @@ figcaption * {
 
 .music__grid-wrapper {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(4, 200px);
     grid-template-rows: auto;
     gap: 0px;
     margin: 1rem 2rem;
 }
 
-.music__grid-img img {
-max-width: 50%;
+.music__grid-img {
+    object-fit: cover;
 }
 
 .portrait {
-    grid-row: span 2;
+    width: 200px;
+    height: 400px;
 }
 
 .landscape {
-    grid-column: span 2;
+    width: 400px;
+    height: 200px;
 }
 
 .youtube {
@@ -219,4 +221,6 @@ max-width: 50%;
 }
 
 .square {
+    width: 200px;
+    height: 200px;
 }
