--- a/base.css
+++ b/base.css
@@ -52,6 +52,9 @@ background: var(--gradient-primary);
 
 
 /* header/nav styling */
+.nav__toggle {
+    display: none;
+}
 
 ul {
     list-style-type: none;
@@ -101,6 +104,18 @@ footer [class*="fa-"] {
     padding: 0.5rem;
 }
 
-icon__container {
+.icon__container {
     margin: 0px auto;
+}
+
+/* MEDIA QUERIES */
+
+@media (max-width: 700px) {
+    .nav__toggle {
+        display: block;
+        font-size: 1.5rem;
+        background: transparent;
+        border: none;
+        cursor: pointer; 
+    }
 }
