--- a/main.css
+++ b/main.css
@@ -65,6 +65,7 @@ figure {
 figure img {
     /* height: 100%; */
     width: 100%;
+    min-width: 300px;
     grid-column: 1/2;
     grid-row: 1/4;
     object-fit: fill;
@@ -199,7 +200,7 @@ figcaption * {
 .music__grid-wrapper {
     width: 70%;
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: repeat(3,1fr);
     grid-template-rows: auto;
     gap: 10px;
     margin: 0 auto;
@@ -225,6 +226,9 @@ figcaption * {
 }
 
 @media (min-width: 1301px) {
+    figure {
+        grid-template-columns: 1fr;
+    }
     .music__grid-wrapper {
          grid-template-columns: repeat(2, 1fr);
         }
