--- a/base.css
+++ b/base.css
@@ -114,7 +114,7 @@ main a:hover {
 
 .bio {
     text-align: left;
-    margin: 2rem 4rem;
+    margin: 2rem 4rem 0rem;
 }
 
 .bio p {
@@ -127,11 +127,33 @@ main a:hover {
     grid-template-columns: repeat(5,1fr);
     width: 70vw;
     margin: 0 auto;
+    text-align: center;
+}
+
+.tech-icon {
+    display: grid;
+    justify-self: center;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(2, 1fr);
 }
 
 .tech-icon img {
     max-width: 100px;
+    grid-template-rows: 1/3;
+   
 }
+
+.tech-icon-info {
+    text-align: center;
+    grid-template-rows: 3/4;
+    opacity: 0;
+}
+
+.tech-icon:hover .tech-icon-info {
+    opacity: 1;
+    transition: opacity 0.5s;
+} 
+
 
 /* Footer styling */
 
