--- a/main.css
+++ b/main.css
@@ -92,7 +92,7 @@ main {
     margin: 0.5rem;
 }
 
-figure:hover {
+.project:hover {
     transform: scale(1.025);
 }
 
@@ -128,6 +128,7 @@ figure:hover {
     padding: 2rem 0.5rem;
     color: var(--text-color-tertiary);
     box-shadow: 5px 5px 10px rgba(101, 100, 100, 0.6);
+    border-radius: 30px;
 }
 
 .prev-btn,
