--- a/base.css
+++ b/base.css
@@ -88,8 +88,6 @@ a {
     color: black;
 }
 
-
-
 .btn {
     font-family: var(--font-primary);
     font-size: 1.5rem;
@@ -115,6 +113,11 @@ main a:hover {
 .bio {
     text-align: left;
     margin: 2rem 4rem 0rem;
+}
+
+.bio-greeting {
+    font-size: 3rem;
+    font-weight: lighter;
 }
 
 .bio p {
@@ -202,26 +205,41 @@ footer [class*="fa-"] {
         -webkit-text-fill-color: transparent;
     }
 
-    .nav__logo {
+    .title-container {
         display: none;
     }
 
-   .links { 
+   .nav-links { 
         height: 0;
         overflow: hidden;
     } 
 
     .show__links {
         display: flex;
+        margin: 0 auto;
         flex-flow: column wrap;
+        align-items: center;
         height: 10rem;
         margin-top: 2rem;
         padding-right: 2rem;
+    }
+
+    .nav__link {
+        text-align: center;
+        margin-right: 0;
+        padding: 1rem;
     }
 
     .show__links a:hover {
         color: var(--text-color-location);
     }
 
+    .bio {
+        text-align: center;
+    }
+
+    .tech-icon-container {
+        grid-template-columns: repeat(2,1fr);
+    }
 
 }
